Improve building and Dockerfile

--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   },
   "scripts": {
     "clean": "bunx rimraf ./dist/",
-    "copy-assets": "cp ./lib .env ./dist -r ",
+    "copy-assets": "cp ./lib ./dist -r ",
     "get-emujs": "sh ./scripts/install-ejs.sh",
     "get-libretro": "sh ./scripts/install-libretro.sh",
     "compile-server": "bun build ./server.tsx --outfile ./dist/server --compile",
-    "prebuild": "bun clean && mkdir -p dist && bun run get-emujs && bun run get-libretro && bun run copy-assets && bun run compile-server",
-    "build": "bun ./scripts/build.js",
-    "build-dev": "bun build ./index.tsx --outdir ./dist --watch",
+    "setup": "bun clean && mkdir -p dist && bun run get-emujs && bun run get-libretro && bun run copy-assets && bun run compile-server",
+    "build": "bun build ./index.tsx --outdir ./dist",
+    "build-dev": "bun run build --watch",
     "dev": "bun run build-dev & bun run  --watch server.tsx"
   },
   "type": "module"
