--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,7 +22,7 @@ jobs:
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
-        password: ${{ secrets.TOKEN }}
+        password: ${{ secrets.GITHUB_TOKEN }}
       
     #- name: Build the Docker image
     #  run: docker build . --file Dockerfile --tag thorin8k/runr:$(date +%s)
@@ -40,4 +40,4 @@ jobs:
         context: .
         push: true
         platforms: linux/amd64
-        tags: ${{ env.IMAGE_NAME }}:latest
+        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
