--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,6 +32,14 @@ jobs:
       uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
       with:
         images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        flavor: |
+            latest=true
+        tags: |
+            type=raw,value=${{github.ref_name}}
+        labels: |
+            org.opencontainers.image.version=${{github.ref_name}}
+            org.opencontainers.image.title="thorin8k/runr"
+            org.opencontainers.image.licenses="GPL-3.0"
             
     - name: Build image
       uses: docker/build-push-action@v4
@@ -40,4 +48,5 @@ jobs:
         context: .
         push: true
         platforms: linux/amd64
-        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
